--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -59,7 +59,7 @@
   <div class="tab-pane fade" id="profile">
     <p>
         <small>
-            안
+            Version : v1.0.0 (Alpha)
         </small>
     </p>
   </div>
