--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -2,51 +2,34 @@
 
 {% block contents %}
 
-<div class="row mt-5">
+<div class="row">
+
     <div class="col-12 text-center">
-        <legend>
-            <h1 class="account-page">Login</h1>
-        </legend>
+        <h1>L o g i n</h1>
     </div>
-    <div class="col-12 mt-3 text-right">
-        <span>as <a href="{% url 'account:register' %}">Register</a></span>
-    </div>
-</div>
-<div class="row mt-3">
-    <div class="col-12">
-        {{ error }}
+
+    <div class="col-12 text-right">
+        <span>As <a href="{% url 'account:register' %}">Register</a></span>
     </div>
 </div>
-<div class="row mt-3">
-    <div class="col-12" style="
-        padding-left: 5%;
-        padding-right: 0%;">
-        <form method="POST" action=".">
-            {% csrf_token %}
-            {% include "form_error.html" %}
 
-            <div class="form-group row mt-5">
-                <label for="username" class="col-sm-2 col-form-label" style="width: 20%">ID</label>
+<form class="sign-form col-md-12" method="POST" action=".">
+    {% csrf_token %}
+    {% include "form_error.html" %}
 
-                <div style="width: 70%">
-                    <input type="text" class="form-control" name="username" id="username"
-                           value="{{ form.username.value|default_if_none:'' }}">
-                </div>
-            </div>
-
-            <div class="form-group row mt-5">
-                <label for="password" class="col-sm-2 col-form-label" style="width:20%">Password</label>
-
-                <div style="width: 70%">
-                    <input type="password" class="form-control" name="password" id="password"
-                           value="{{ form.password.value|default_if_none:'' }}">
-                </div>
-            </div>
-
-            <div class="mt-5 text-center" style="padding-right:5%">
-                <button type="submit" class="btn btn-primary btn-lg">Go !</button>
-            </div>
-        </form>
+    <div class="form-group">
+        <input type="text" class="form-control" id="username" name="username"
+               value="{{ form.username.value|default_if_none:'' }}" placeholder="I D" onfocus="this.placeholder=''"
+                            onblur="this.placeholder='I D'">
     </div>
-</div>
+
+    <div class="form-group">
+        <input type="password" class="form-control" id="password" name="password"
+               value="{{ form.password.value|default_if_none:'' }}" placeholder="P a s s w o r d" onfocus="this.placeholder=''"
+                            onblur="this.placeholder='P a s s w o r d'">
+    </div>
+
+    <button type="submit" class="btn btn-danger sign-button">G o !</button>
+</form>
+
 {% endblock %}
