--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,24 @@
 {% load static %}
 <html lang="ko">
 <head>
+
     <!-- Meta -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, intitial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,
+                               minimum-scale=1.0,maximum-scale=1.0,
+                               user-scalable=no" />
 
     <!--  CSS, JS  -->
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="{% static 'summernote-lite.css' %}">
 
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
     <script src="{% static 'jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'bootstrap.min.js' %}"></script>
     <script src="{% static 'summernote-lite.js' %}"></script>
     <script src="{% static 'summernote-ko-KR.js' %}"></script>
-
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
 
     <title>우덜의 소통공간^^</title>
 
@@ -44,18 +44,17 @@
 {% endblock %}
 
 <script>
-        function dp_menu(){
-            let click = document.getElementById("navbarColor03");
-            if(click.style.display === "block"){
-                click.style.display = "none";
+    function dp_menu(){
+        let click = document.getElementById("navbarColor03");
+        if(click.style.display === "block"){
+            click.style.display = "none";
 
-            }else{
-                click.style.display = "block";
+        }else{
+            click.style.display = "block";
 
-            }
         }
-    </script>
-
+    }
+</script>
 
 
 </body>
