--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,4 @@
+<div class="page-top">
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
   <legned class="navbar-brand">
     <h2><a href="{% url 'index' %}" id="logo">Soogle</a></h2>
@@ -6,7 +7,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="navbar-collapse collapse" id="navbarColor03" style="">
+  <div class="navbar-collapse collapse" id="navbarColor03">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Notice</a>
@@ -43,3 +44,4 @@
     </form>
   </div>
 </nav>
+</div>
