--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,11 +12,11 @@
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Notice</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'soogle:post_list' %}">Post</a>
-      </li>
       <li class="nav-item active">
         <a class="nav-link disabled" href="#">Blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'soogle:post_list' %}">Community</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">About</a>
