--- a/static/style.css
+++ b/static/style.css
@@ -24,3 +24,16 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+#button-pri {
+    text-align: right;
+}
+
+.post-recommend {
+    margin-right: 5px;
+}
+
+.post-modify {
+    margin-left: auto;
+    margin-right: 5px;
+}
