--- a/templates/post/post_detail.html
+++ b/templates/post/post_detail.html
@@ -4,10 +4,19 @@
 
 {% block contents %}
 
+<!-- 사용자오류 표시 -->
+{% if messages %}
+<div class="alert alert-danger my-3" role="alert">
+    {% for message in messages %}
+	<strong>{{ message.tags }}</strong>
+	<ul><li>{{ message.message }}</li></ul>
+    {% endfor %}
+</div>
+{% endif %}
+
 <div class="jumbotron">
+
 	<!-- Title 영역 -->
-
-
 	<div class="col-12">
 		<div>
 			<h6 class="text-info">T i t l e</h6>
@@ -20,12 +29,26 @@
 				<small class="text-muted">작성 - {{ post.create_date|date:'Y년 m월 d일 H:i' }} {% if post.modify_date %} (수정됨) {% endif %}</small>
 			</div>
 
-			<div class="mt-3" id="button-bin">
-				<a href="#" class="recommend btn btn-sm btn-outline-secondary" data-uri="{% url 'soogle:post_vote' post.id  %}">추천</a>
-				{% if request.user == post.author %}
-				<a href="{% url 'soogle:post_modify' post.id %}" class="btn btn-sm btn-outline-secondary" id="btn1">수정</a>
-				<a href="#" class="delete btn btn-sm btn-outline-secondary" data-uri="{% url 'soogle:post_delete' post.id  %}" id="btn2">삭제</a>
-				{% endif %}
+			<div class="mt-3">
+				<ul class="nav">
+					<li class="nav-item post-recommend">
+						<a href="#" class="recommend btn btn-sm btn-outline-secondary" data-uri="{% url 'soogle:post_vote' post.id  %}">추천</a>
+					</li>
+					
+					<li class="nav-item post-list">
+						<a href="{% url 'soogle:post_list' %}" class="btn btn-sm btn-outline-secondary">목록</a>
+					</li>
+
+					{% if request.user == post.author %}
+					<li class="nav-item post-modify">
+						<a href="{% url 'soogle:post_modify' post.id %}" class="btn btn-sm btn-outline-secondary">수정</a>
+					</li>
+
+					<li class="nav-item post-delete">
+						<a href="#" class="delete btn btn-sm btn-outline-secondary" data-uri="{% url 'soogle:post_delete' post.id  %}">삭제</a>
+					</li>
+					{% endif %}
+				</ul>
 			</div>
 
 		</div>
@@ -57,9 +80,9 @@
 			<span style="white-space: pre-line;">{{ comment.contents }}</span>
 
 	        <!-- 질문 댓글 작성 시간 -->
-	        <span>
+	        <small class="text-muted">
 	        - {{ comment.author }} {% if comment.modify_date %} (수정됨) {% endif %}
-	        </span>
+	        </small>
 		</div>
 		{% endfor %}
 	</div>
