--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -13,7 +13,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#profile">Profile</a>
+                <a class="nav-link" data-toggle="tab" href="#profile">Version</a>
             </li>
 
             {% if user.is_authenticated %}
@@ -56,7 +56,7 @@
   <div class="tab-pane fade" id="profile">
     <p>
         <small>
-            Version : v1.1.2 (Alpha)
+            Version : v1.2.2 (Alpha)
         </small>
     </p>
   </div>
