--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,47 +1,72 @@
 <div class="page-top">
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-  <legned class="navbar-brand">
-    <h2><a href="{% url 'index' %}" id="logo">Soogle</a></h2>
-  </legned>
-  <button class="navbar-toggler collapsed" onclick="dp_menu()" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
 
-  <div class="navbar-collapse collapse" id="navbarColor03">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Notice</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link disabled" href="#">Blog</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'soogle:post_list' %}">Community</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">About</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
-        <div class="dropdown-menu" id="myDropdown">
-          {% if user.is_authenticated %}
-          <a class="dropdown-item disabled" href="#">My information</a>
-          <a class="dropdown-item disabled" href="#">My Blog</a>
-          <a class="dropdown-item disabled" href="#">Scret Diary</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'account:logout' %}">Logout</a>
-          {% else %}
-          <a class="dropdown-item" href="{% url 'account:register' %}">Register</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'account:login' %}">Login</a>
-          {% endif %}
+        <legned class="navbar-brand">
+            <h2><a href="{% url 'index' %}" id="logo">Soogle</a></h2>
+        </legned>
+
+        <button class="navbar-toggler collapsed" onclick="dp_menu()" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse collapse" id="navbarColor03">
+            <ul class="navbar-nav mr-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Notice</a>
+                </li>
+
+                <li class="nav-item active">
+                    <a class="nav-link disabled" href="#">Blog</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'soogle:post_list' %}">Community</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">About</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
+                    <div class="dropdown-menu" id="myDropdown">
+
+                        {% if user.is_authenticated %}
+
+                        <a class="dropdown-item disabled" href="#">My information</a>
+                        <a class="dropdown-item disabled" href="#">My Blog</a>
+                        <a class="dropdown-item disabled" href="#">Scret Diary</a>
+
+                        <div class="dropdown-divider"></div>
+
+                        <a class="dropdown-item" href="{% url 'account:logout' %}">Logout</a>
+
+                        {% else %}
+
+                        <a class="dropdown-item" href="{% url 'account:register' %}">Register</a>
+
+                        <div class="dropdown-divider"></div>
+
+                        <a class="dropdown-item" href="{% url 'account:login' %}">Login</a>
+
+                        {% endif %}
+
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+
+            </form>
+<!--            <div class="col-4 input-group">-->
+<!--                <input type="text" class="form-control kw" value="{{ kw|default_if_none:'' }}">-->
+<!--                <div class="input-group-append">-->
+<!--                    <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+    </nav>
 </div>
