--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,5 +46,5 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background: url('arrow.png') no-repeat 95% 50%;
+    background: url('/static/img/arrow.png') no-repeat 95% 50%;
 }
