--- a/templates/base.html
+++ b/templates/base.html
@@ -9,16 +9,16 @@
                                user-scalable=no" />
 
     <!--  CSS, JS  -->
-    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    <link rel="stylesheet" href="{% static 'summernote-lite.css' %}">
+    <link rel="stylesheet" href="{% static '/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
+    <link rel="stylesheet" href="{% static '/css/summernote-lite.css' %}">
 
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static '/img/favicon.ico' %}">
 
-    <script src="{% static 'jquery-3.4.1.min.js' %}"></script>
-    <script src="{% static 'bootstrap.min.js' %}"></script>
-    <script src="{% static 'summernote-lite.js' %}"></script>
-    <script src="{% static 'summernote-ko-KR.js' %}"></script>
+    <script src="{% static '/js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static '/js/bootstrap.min.js' %}"></script>
+    <script src="{% static '/js/summernote-lite.js' %}"></script>
+    <script src="{% static '/js/summernote-ko-KR.js' %}"></script>
 
     <title>우덜의 소통공간^^</title>
 
