--- a/templates/post/post_detail.html
+++ b/templates/post/post_detail.html
@@ -6,7 +6,7 @@
 
 <!-- 사용자오류 표시 -->
 {% if messages %}
-<div class="alert alert-danger my-3" role="alert">
+<div class="alert alert-warning my-3" role="alert">
     {% for message in messages %}
 	<strong>{{ message.tags }}</strong>
 	<ul><li>{{ message.message }}</li></ul>
