--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,8 +16,8 @@
                     <a class="nav-link disabled" href="#">Notice</a>
                 </li>
 
-                <li class="nav-item active">
-                    <a class="nav-link disabled" href="#">Blog</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://vollug.tistory.com/" target="_blank">Blog</a>
                 </li>
 
                 <li class="nav-item">
@@ -25,7 +25,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">About</a>
+                    <a class="nav-link" href="{% url 'question:about' %}">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -35,7 +35,7 @@
                         {% if user.is_authenticated %}
 
                         <a class="dropdown-item disabled" href="#">My information</a>
-                        <a class="dropdown-item disabled" href="#">My Blog</a>
+                        <a class="dropdown-item" href="#">Membership</a>
                         <a class="dropdown-item disabled" href="#">Scret Diary</a>
 
                         <div class="dropdown-divider"></div>
