--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -86,9 +86,9 @@
     </div>
 </div>
 
-<div class="mt-4">
+<div class="mt-3">
 	<!-- 페이징처리 시작 -->
-	<ul class="pagination" style="justify-content: center;">
+	<ul class="pagination pagination-sm" style="justify-content: center;">
         <!-- 이전페이지 -->
         {% if post_list.has_previous %}
         <li class="page-item">
