--- a/templates/post/post_detail.html
+++ b/templates/post/post_detail.html
@@ -25,8 +25,21 @@
 		<div class="mt-4">
 			<h1><strong>{{ post.title }}</strong></h1>
 			<div class="mt-4" id="write-date">
-
-				<small class="text-muted">{{ post.author.username }} - {{ post.create_date|date:'Y년 m월 d일 H:i' }} {% if post.modify_date %} (수정됨) {% endif %}</small>
+				{% if post.author.username == "admin" %}
+				<span>
+					<small class="text-danger">{{ post.author.username }} </small>
+				</span>
+				<span>
+				    <small class="text-muted"> - {{ post.create_date|date:'Y년 m월 d일 H:i' }} {% if post.modify_date %} (수정됨) {% endif %}</small>
+				</span>
+				{% else %}
+				<span>
+					<small class="text-muted">{{ post.author.username }} </small>
+				</span>
+				<span>
+				    <small class="text-muted"> - {{ post.create_date|date:'Y년 m월 d일 H:i' }} {% if post.modify_date %} (수정됨) {% endif %}</small>
+				</span>
+				{% endif %}
 			</div>
 
 			<div class="mt-3">
@@ -80,9 +93,16 @@
 			<span style="white-space: pre-line;">{{ comment.contents }}</span>
 
 	        <!-- 질문 댓글 작성 시간 -->
-	        <small class="text-muted">
-	        - {{ comment.author }} {% if comment.modify_date %} (수정됨) {% endif %}
+			<span class="text-muted"> - </span>
+			{% if comment.author.username == "admin" %}
+			<small class="text-danger">
+	         {{ comment.author }} {% if comment.modify_date %} (수정됨) {% endif %}
 	        </small>
+			{% else %}
+	        <small class="text-muted">
+	        {{ comment.author }} {% if comment.modify_date %} (수정됨) {% endif %}
+	        </small>
+			{% endif %}
 		</div>
 		{% endfor %}
 	</div>
