--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,11 @@
 
 
 {% block contents %}
-
-
+<div class="text-danger text-center">
+	<h5>현재 데이터 초기화로 인해</h5>
+	<h5>모든 정보가 삭제되었으니</h5>
+	<h5>다시 가입해주시길 바랍니다.</h5>
+</div>
 
 {% endblock %}
 
