--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Notice</a>
+                    <a class="nav-link" href="{% url 'notice:notice_list' %}">Notice</a>
                 </li>
 
                 <li class="nav-item">
