--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -6,7 +6,9 @@
 
 <div class="row">
     <div class="col-12">
-        <ul class="nav nav-tabs">
+        <h1 class="text-center">C o m m u n i t y</h1>
+
+        <ul class="nav nav-tabs mt-5">
 
             <li class="nav-item">
                 <a class="nav-link active" data-toggle="tab" href="#home">Home</a>
