--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="https://vollug.tistory.com/" target="_blank">Blog</a>
+                    <a class="nav-link" href="https://seongsu.me/" target="_blank">Blog</a>
                 </li>
 
                 <li class="nav-item">
