--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 <body>
 {% include "navbar.html" %}
 
-<div class="container">
+<div class="container mb-5">
 {% block contents %}
 {% endblock %}
 </div>
