--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
 				{% for notice in notice_index %}
 				<h4 class="card-title">{{ notice.title }}</h4>
 				<p class="card-text">{{ notice.contents|mark }}</p>
+				<fieldset class="form-group">
+			      <input type="range" class="custom-range" id="customRange1">
+			    </fieldset>
 				{% endfor %}
 		    </div>
 		</div>
