--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,7 +30,7 @@
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
-                    <div class="dropdown-menu" id="myDropdown">
+                    <div class="dropdown-menu mb-4" id="myDropdown">
 
                         {% if user.is_authenticated %}
 
@@ -53,18 +53,7 @@
                     </div>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
 
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-
-            </form>
-<!--            <div class="col-4 input-group">-->
-<!--                <input type="text" class="form-control kw" value="{{ kw|default_if_none:'' }}">-->
-<!--                <div class="input-group-append">-->
-<!--                    <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>-->
-<!--                </div>-->
-<!--            </div>-->
         </div>
     </nav>
 </div>
