--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -15,42 +15,49 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#profile">Version</a>
+                <a class="nav-link" data-toggle="tab" href="#profile">Profile</a>
             </li>
-
             <li class="nav-item" id="write-tab">
                 <a class="nav-link" href="{% url 'soogle:post_write' %}">Write</a>
             </li>
         </ul>
     </div>
 </div>
-<div>
-    <select  class="form-control so" id="post-align">
-        <option value="recent" {% if so == 'recent' %}selected{% endif %}>Recent</option>
-        <option value="recommend" {% if so == 'recommend' %}selected{% endif %}>Recommend</option>
-        <option value="popular" {% if so == 'popular' %}selected{% endif %}>Popular</option>
-    </select>
-</div>
-<div id="myTabContent" class="tab-content mt-3">
 
-    <div class="tab-pane fade show active" id="home">
-        <p>
-            <small>
-                안녕하세요 soogle 입니다.
-            </small>
-        </p>
-    </div>
-    <div class="tab-pane fade" id="profile">
-        <p>
-            <small>
-                Version : v1.3.0 (Alpha)
-            </small>
-        </p>
+<div class="row">
+    <div class="col-12">
+        <div id="myTabContent" class="tab-content">
+
+
+            <div class="tab-pane fade show active" id="home">
+                    <div class="col-5 select-tab">
+                        <select  class="form-control so post-align">
+                            <option value="recent" {% if so == 'recent' %}selected{% endif %}>Recent</option>
+                            <option value="recommend" {% if so == 'recommend' %}selected{% endif %}>Recommend</option>
+                            <option value="popular" {% if so == 'popular' %}selected{% endif %}>Popular</option>
+                        </select>
+                    </div>
+                    <div class="col-5 search-tab input-group">
+                        <input type="text" class="form-control kw post-align" value="{{ kw|default_if_none:'' }}">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary post-align" type="button" id="btn_search">Go</button>
+                        </div>
+                    </div>
+            </div>
+
+            <div class="tab-pane fade" id="profile" >
+                <p style="padding-top: 5px;">
+                    <small>
+                        안녕하세요 Soogle 입니다.
+                    </small>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 
 <div class="row mt-5">
-    <div class="col-12">
+    <div class="col-12 ">
 	<table class="table table-hover">
         <thead>
         <tr class="text-center">
@@ -70,15 +77,15 @@
                 {% endif %}
             </td>
             <td>
-                <a href="{% url 'soogle:post_detail' post.id %}">{{ post.title }}</a>
+                <a href="{% url 'soogle:post_detail' post.id %}"><small>{{ post.title }}</small></a>
                 {% if post.comment_set.count > 0 %}
                 <span class="text-danger small ml-2">{{ post.comment_set.count }}</span>
                 {% endif %}
             </td>
             {% if post.author.username == "admin" %}
-            <td class="text-danger" style="padding-left:0; padding-right:0;">{{ post.author.username }}</td>
+            <td class="text-danger" style="padding-left:0; padding-right:0;"><small>{{ post.author.username }}</small></td>
             {% else %}
-            <td style="padding-left:0; padding-right:0;">{{ post.author.username }}</td>
+            <td style="padding-left:0; padding-right:0;"><small>{{ post.author.username }}</small></td>
             {% endif %}
         </tr>
         {% endfor %}
